--- a/style2.css.css
+++ b/style2.css.css
@@ -48,10 +48,10 @@ body {
             padding: 20px;
             margin: 15px 0;
             border-radius: 5px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 2px 2px 10px rgba(150, 82, 82, 0.1);
             text-align: center;
 
-            border: 3px solid #000000;
+            border: 3px solid #ffffff;
         }
 
         /* Image styling */
